enum Constants {
    static let appTitle = "List"
    static let widgetKind = "com.example.ltp.list-widget"
    static let appGroupID = "group.com.example.ltp.list"
    static let noItems = "No Items"
    static let addItemURLString = "list:///item/add"
    static let editItemURLString = "list:///item/edit/"
}
